--- a/Atividade_02.Rmd
+++ b/Atividade_02.Rmd
@@ -40,7 +40,10 @@ sd(tempo)
 ```{r}
 hist(tempo)
 ```
-- c) Ache a mediana e os quartis. 
+<br>
+
+- c) Ache a mediana e os quartis.
+ 
 ```{r}
 quantile(tempo,c(0.25,0.50,0.75))
 ```
@@ -58,7 +61,6 @@ dados <- c(94.1, 87.3, 94.1, 92.4, 84.6, 85.4, 93.2, 84.1, 92.1, 90.6,
            96.8, 82.9, 86.1, 93.1, 96.3, 84.1, 94.4, 87.3, 90.4, 86.4,
            94.7, 82.6, 96.1, 86.4, 89.1, 87.6, 91.1, 83.1, 98.0, 84.5)
 
-hist(dados)
 ```
 
 
@@ -67,4 +69,61 @@ hist(dados, probability = TRUE, col = "gray", border = "black", main = "Histogra
 lines(density(dados), col = "blue", lwd = 2)  # Adiciona a curva de densidade estimada
 ```
 
+#### 4) Considere o rendimento do processo químico do exercício anterior. Calcule a média amostral e o desvio padrão.
 
+```{r}
+mean(dados)
+sd(dados)
+```
+#### 5) Suponha que dois dados não viciados são lançados e uma variável aleatória observada, digamos X, que corresponde a soma das duas faces superiores. Descreva o espaço amostral do experimento e determine a
+função de probabilidade da v.a. X.
+```{r}
+dados <- expand.grid(1:6,1:6)
+
+X <- apply(dados,1,sum)
+
+fdp <- table(X)/length(X)
+
+fdp
+```
+#### 7) Calculadoras eletrônicas são classificadas ao final de um trabalho de inspeção. Três tipos de nãoconformidade podem ocorrer nas calculadoras: crítica, maior e menor. A experiência tem indicado que os
+defeitos ocorrem da maneira seguinte: 
+
+(A)críticos 1,5% | (B)maiores 1,0% | (C)menores 2,0% | (A∩B)ambos crítico e maior 0,2% | (A∩C)ambos crítico e menor 0,8% | (B∩C)ambos maior e menor 0,5%
+| (A∩B∩C)os três defeitos 0,1%
+
+<br>
+
+###### a) Qual a porcentagem da produção que estão de acordo com as especificações de projeto?
+
+-  A U B U C = A + B + C - A∩B - A∩C - B∩C + A∩B∩C // A U B U C = 1.5 + 1 + 2 - 0.2 - 0.8 - 0.5 + 0.1 = 3.1. Temos 3,1% de peças defeituosas, logo 96,9% estão de acordo.
+
+
+###### b) Calculadoras que tem defeito crítico ou defeito crítico e outro tipo de defeito devem ser jogados fora. Qual a porcentagem da produção jogada fora?
+
+- 1,5% das peças devem ser jogadas fora. 
+
+###### c) Calculadoras com defeito maior ou menor ou ambos devem ser consertados. Qual a porcentagem da
+produção sujeita a retrabalho?
+
+- O resultado pode ser escrito como o total de peças defeituosas - com apenas defeito crítico. O total de peças com apenas defeito crítico pode ser representado por A - A∩B - A∩C + A∩B∩C = 1,5 - 0,2 - 0,8 + 0,1. logo a porcentagem sujeita a retrabalho é de 3,1% - 0,6 % =  **2,5 %**
+
+
+#### 8) A distribuição de probabilidade da v.a. contínua \( X \) tem a seguinte função densidade de probabilidade:  
+
+\[
+f(x) = k e^{-kx}, \quad 0 < x < \infty
+\]
+
+Ache o valor da constante \( k \) e também a **média** e a **variância** de \( X \).
+
+
+ - Para que a função seja uma função de densidade de probabilidade, a sua integral de -inf a +inf deve dar 1, para essa solução, temos K = 1. Podemos identificar essa densidade como a distribuição de uma exponencial(1), logo tempos sua E(X) = 1/1 e VAR(X) = 1/1^2
+ 
+ 
+ ##### 9) A v.a. X assume os valores 1, 2, ou 3 com probabilidades (1+3k)/3, (1+2k)/3 e (0,5+5k)/3, respectivamente.
+
+- a) Determine o valor adequado de k.
+- b) Determine a média e a variância de X.
+- c) Determine a função distribuição acumulada de X
+ 
